GetTransactionsByAddress, GetBlockByNumber, GetBlockByHash
