# models/transactionModel.go
@@ -3,7 +3,7 @@ package models
 type Transaction struct {
 	Hash             string `json:"hash"`
 	BlockHash        string `json:"blockHash"`
-	BlockNumber      uint64 `json:"blockNUmber"`
+	BlockNumber      uint64 `json:"blockNumber"`
 	From             string `json:"from"`
 	To               string `json:"to"`
 	Gas              uint64 `json:"gas"`
